2004-01-29  Jorn Baayen  <jorn@nl.linux.org>

	* data/muine.schemas.in:

	Set playlist dir to ~/Music/Playlists instead of ~/Playlists
	
	* libmuine/metadata.c: (assign_metadata_mp3),
	(FLAC_metadata_callback):

	Replaygain for mp3s, (hopefully) fix FLAC song duration.

2004-01-29  Jorn Baayen  <jorn@nl.linux.org>

	* libmuine/db.c: (db_pack_double):

	Fix precision for db_pack_double.

2004-01-29  Jorn Baayen  <jorn@nl.linux.org>

	* libmuine/pointer-list-view.c: (pointer_list_view_select_next),
	(pointer_list_view_select_prev):
	* libmuine/pointer-list-view.h:
	* src/HandleView.cs:
	* src/PlaylistWindow.cs:

	Don't unnecessarily change the selected row when a row is deleted.

2004-01-28  Jorn Baayen  <jorn@nl.linux.org>

	* src/PlaylistWindow.cs:

	Fix the bug where sometimes different songs than added would
	be played.

2004-01-28  Lee Willis  <lee@leewillis.co.uk>
            Jorn Baayen  <jorn@nl.linux.org>

	* TODO:
	* src/CoverDatabase.cs:
	* src/PlaylistWindow.cs:
	* src/Song.cs:

	Improve cover image fetching reliability.

2004-01-28  Jorn Baayen  <jorn@nl.linux.org>

	* TODO:
	* configure.in:
	* libmuine/Makefile.am:
	* libmuine/metadata.c: (assign_metadata_vorbiscomment),
	(assign_metadata_ogg), (FLAC_read_callback), (FLAC_write_callback),
	(FLAC_metadata_callback), (FLAC_error_callback),
	(assign_metadata_flac), (metadata_load):
	* libmuine/player.c: (create_decoder):
	* src/About.cs:

	Flac support, and bump version number to 0.3.0.99. Enjoy, edd ;)

2004-01-28  Jorn Baayen  <jorn@nl.linux.org>

	* libmuine/db.c: (db_get_version), (db_set_version), (db_foreach):

	Plug leaks.

2004-01-28  Jorn Baayen  <jorn@nl.linux.org>

	* src/Song.cs:

	Fix checked_cover_image being set to true when it should be false.

2004-01-28  Jorn Baayen  <jorn@nl.linux.org>

	* data/glade/PlaylistWindow.glade:
	* src/PlaylistWindow.cs:

	Revert making artist and title labels one. It broke ellipsizification..
	or whatever the right word for that is.
