@@ -46,8 +46,6 @@ o Directly use Pango# instead of using pango-utils.c
   Depends on Gtk#, Ximian Bugzilla #52575
 o Musicbrainz support
   We need a musicbrainz element for GStreamer
-  We should also use album IDs from musicbrainz to distinguish albums with
-  the same name.
 o Support setting different equalizer settings, reverb etc for different
   albums.
   We need an equalizer element etc for GStreamer.
@@ -68,6 +66,7 @@ o Drag images from Nautilus or Epiphany to the album cover area in
   (This one is half implemented)
 o Make title and artist label one for easier selection.
   We need a proper Gtk ellipsizing widget for this.
+o Use storage
 
 Current problems:
 =================
