@@ -111,9 +111,6 @@ public class AddAlbumWindow
 		view.SelectFirst ();
 		view.ScrollToPoint (0, 0);
 
-		play_button.HasDefault = true;
-		queue_button.HasDefault = false;
-
 		if (window.Visible == false)
 			window.Visible = true;
 		else
@@ -191,9 +188,6 @@ public class AddAlbumWindow
 
 			view.SelectNext (true);
 
-			play_button.HasDefault = false;
-			queue_button.HasDefault = true;
-				
 			break;
 		default:
 			window.Visible = false;
@@ -287,10 +281,7 @@ public class AddAlbumWindow
 
 	private void HandleRowActivated (IntPtr handle)
 	{
-		if (queue_button.HasDefault)
-			queue_button.Click ();
-		else
-			play_button.Click ();
+		play_button.Click ();
 	}
 
 	private void HandleSelectionChanged ()
